--- a/css/exercises/styles.css
+++ b/css/exercises/styles.css
@@ -1,1 +1,25 @@
 /* Start adding your styling below! */ 
+
+body {
+    background-color: yellow;
+
+}
+p {
+    color: green;
+}
+
+h1 {
+    font-size:  30px;
+}
+
+.center {
+    text-align: center;
+}
+
+#cool-text {
+    color: blue;
+}
+
+#color-change {
+    color: red;
+}
